newtype-tools/tests/newtype-fail/union.stderr
error: expected `struct Type(inner_type)` or `struct Type { inner: type }`
 --> tests/newtype/union.rs:4:1
  |
4 | union U {
  | ^^^^^
